fixed alignment of login menu

--- a/hobbytracker/myapp/static/myapp/css/user_login.css
+++ b/hobbytracker/myapp/static/myapp/css/user_login.css
@@ -13,9 +13,6 @@ body {
     color: #024230;
     background-color:#ffffff;
 }
-#everything{
-    width: 100%;
-}
 #forms{
     position: relative;
     margin: 2%;
@@ -24,8 +21,8 @@ body {
 }
 #formComponents{
     position:absolute;
-    top: 50%;
-    left: 50%;
+    top: 25%;
+    left: 38%;
     padding-top: 2%;
     padding-left: 2%;
     padding-bottom: 2%;
